[package]
name = "multicom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.28.1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "rt", "fs", "sync", "net", "io-util"] }
